# hex

./: .gitignore  Cargo.toml  README.md
assets/: file_structure.meta.ron  mod_order.meta.ron
assets/config/default/: debug.ron
assets/default/: manifest.meta.ron
assets/default/config/: audio.config.ron  debug.config.ron  input.config.ron  keys.config.ron  world.config.ron
assets/mods/dev/: .gitignore  manifest.meta.ron
hex_derive/: Cargo.toml
hex_derive/src/: lib.rs
src/: animate_simple.rs  debug_window.rs  main.rs
src/assets/: mod.rs  storage.rs
src/assets/config/: config_audio.rs  config_debug.rs  config_keys.rs  config_world.rs  configs.rs  mod.rs
src/assets/loading/: loader.rs  meta.rs  mod.rs
src/config/: config_debug.rs  mod.rs
src/coords/: axial.rs  mod.rs
src/game/: mod.rs
src/game/actors/: mod.rs  player.rs  structs.rs
src/game/camera/: first_person.rs
src/game/hex_grid/: axial.rs  block.rs  chunk.rs  chunk_loading.rs  chunks.rs  mod.rs
src/game/hex_grid/axial/: chunk_id.rs  columns.rs  ipos.rs  mod.rs  pos.rs
src/game/meshes/: debug_lines.rs  hexagon.rs  mod.rs  sun.rs
src/game/movement/: char_control.rs  direction.rs  input.rs  mod.rs  structs.rs
src/game/procedural_generation/: biomes.rs  block.rs  chunk.rs  mod.rs  noise_generation.rs
src/io/: mod.rs
src/io/asset_loading/: loader.rs  meta.rs  mod.rs
src/io/audio/: asset_ids.rs  mod.rs
src/io/config/: config_audio.rs  config_debug.rs  config_input.rs  config_world.rs  configs.rs  mod.rs
src/io/input/: binding.rs  input_actions.rs  input_handler.rs  mod.rs
src/io/window/: debug_window.rs  mod.rs  window_event_handler.rs
src/meshes/: debug_lines.rs  height_map.rs  hexagon.rs
src/states/: appstate.rs  mod.rs  state_game.rs  state_loading.rs
