[package]
name = "hex"
version = "0.1.0"
edition = "2021"

[features]
# Defines a feature named `debugwindow` that does not enable any other features.
debugwindow = ["dep:egui", "dep:bevy_egui", "dep:bevy-inspector-egui"]

[workspace]
resolver = "2"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]

# Procedural macros must be in their own crate.
# By convention, the crate should be inside this crate's directory and be named (this_crates_name)_derive
hex_derive = { path = "./hex_derive" }

# These three egui crates are only compiled if the debugwindow feature flag is enabled:
egui = { version = "0.20.1", optional = true }
bevy_egui = { version = "0.19.0", optional = true }
bevy-inspector-egui = { version = "0.17.0", optional = true }

bevy_kira_audio = { version = "0.13.0", features = ["ogg"] }
iyes_loopless = "0.9.1"
noise = "0.8"
serde = { version = "1.0", features = ["derive"] }
rand = "*"
ron = "*"
splines = "4.1.1"
once_cell = "1.16"

[dependencies.bevy]
version = "0.9.1"
# We must disable default features because we're using bevy_kira_audio:
default-features = false
# Now we have to add all default features we want back in:
features = [

    # These are the default features:
    # (re-enable whichever you like)
    "bevy_asset",
    #    "bevy_scene",

    # Bevy functionality:
    #    "animation",          # Animation support
    #    "bevy_gilrs",         # Gamepad input support
    #    "bevy_audio",         # Builtin audio
    "bevy_winit", # Window management
    "x11", # Linux: Support X11 windowing system
    #    "filesystem_watcher", # Asset hot-reloading
    "render", # Graphics Rendering

    ## "render" actually just includes:
    ## (feel free to use just a subset of these, instead of "render")
    "bevy_render", # Rendering framework core
    "bevy_core_pipeline", # Higher-level rendering abstractions
    "bevy_sprite", # 2D (sprites) rendering
    "bevy_pbr", # 3D (physically-based) rendering
    "bevy_gltf", # GLTF 3D assets format support
    "bevy_text", # Text/font rendering
    "bevy_ui", # UI toolkit

    # File formats:
    #    "png",
    #    "hdr",
    #    "vorbis",

    # These are other features that may be of interest:
    # (add any of these that you need)

    # Bevy functionality:
    "wayland", # Linux: Support Wayland windowing system
    "subpixel_glyph_atlas", # Subpixel antialiasing for text/fonts
    "serialize", # Support for `serde` Serialize/Deserialize

    # File formats:
    #    "ktx2", # preferred format for GPU textures
    #    "dds",
    #    "jpeg",
    #    "bmp",
    #    "tga",
    #    "basis-universal",
    #    "zstd", # needed if using zstd in KTX2 files
    #    "flac",
    #    "mp3",
    #    "wav",

    # Development/Debug features:
    #        "dynamic",      # Dynamic linking for faster compile-times
    #    "trace",        # Enable tracing for performance measurement
    #    "trace_tracy",  # Tracing using `tracy`
    #    "trace_chrome", # Tracing using the Chrome format
    #    "wgpu_trace",   # WGPU/rendering tracing
]
