[package]
name = "hex"
version = "0.1.0"
edition = "2021"

[features]
#default= [ "debugwindow" ]
# Defines a feature named `debugwindow` that does not enable any other features.
debugwindow = ["dep:egui", "dep:bevy_egui", "dep:bevy-inspector-egui", ]

[workspace]
resolver = "2"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]

# Procedural macros must be in their own crate.
# By convention, the crate should be inside this crate's directory and be named (this_crates_name)_derive
hex_derive = { path = "./hex_derive" }

# These three egui crates are only compiled if the debugwindow feature flag is enabled:
egui = { version = "0.21.0", optional = true }
bevy_egui = { version = "0.20.1", optional = true }
bevy-inspector-egui = { version = "0.18.1", optional = true }

bevy_kira_audio = { version = "0.15.0", features = ["ogg"] }
noise = "0.8"
serde = { version = "1.0", features = ["derive"] }
rand = "*"
ron = "*"
splines = "4.1.1"
once_cell = "1.16"

[dependencies.bevy]
version = "0.10.0"
# We must disable default features because we're using bevy_kira_audio:
default-features = true
# Now we have to add all default features we want back in:
features = [

    # These are the default features:
    # (re-enable whichever you like)
    "animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "png",
    "hdr",
    "ktx2",
    "zstd",
    "vorbis",
    "x11",
    "filesystem_watcher",
    "android_shared_stdcxx",
    "tonemapping_luts",

    # Bevy functionality:
    "wayland", # Linux: Support Wayland windowing system
    "subpixel_glyph_atlas", # Subpixel antialiasing for text/fonts
    "serialize", # Support for `serde` Serialize/Deserialize

]
